generated/checker-for-evaluation/generated/test-Buffer-Overflow-b58b1b883b9b702e25204dbe2b221eecc8ecd159/build_logs/2/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:137:53: error: cannot convert ‘clang::ASTContext’ to ‘clang::ento::CheckerContext&’
  137 |   if (hasProperBoundaryCheck(TargetBO, BR.getContext()))
      |                                        ~~~~~~~~~~~~~^~
      |                                                     |
      |                                                     clang::ASTContext
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:71:62: note:   initializing argument 2 of ‘bool {anonymous}::SAGenTestChecker::hasProperBoundaryCheck(const clang::Stmt*, clang::ento::CheckerContext&) const’
   71 |   bool hasProperBoundaryCheck(const Stmt *S, CheckerContext &C) const {
      |                                              ~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:143:31: error: no matching function for call to ‘clang::ento::BugReporter::EmitBasicReport(const clang::FunctionDecl*&, const {anonymous}::SAGenTestChecker*, std::unique_ptr<clang::ento::BugType>::pointer, const char [35], const char [6], const char [93], clang::SourceRange&)’
  143 |   auto *R = BR.EmitBasicReport(FD, this, BT.get(), "Potential iov_iter count underflow",
      |             ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  144 |                                "Logic", "Subtraction of 'shorten' from 'iter->count' may underflow the count without a boundary check", SR);
      |                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:633:8: note: candidate: ‘void clang::ento::BugReporter::EmitBasicReport(const clang::Decl*, const clang::ento::CheckerBase*, llvm::StringRef, llvm::StringRef, llvm::StringRef, clang::ento::PathDiagnosticLocation, llvm::ArrayRef<clang::SourceRange>, llvm::ArrayRef<clang::FixItHint>)’
  633 |   void EmitBasicReport(const Decl *DeclWithIssue, const CheckerBase *Checker,
      |        ^~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:634:34: note:   no known conversion for argument 3 from ‘std::unique_ptr<clang::ento::BugType>::pointer’ {aka ‘clang::ento::BugType*’} to ‘llvm::StringRef’
  634 |                        StringRef BugName, StringRef BugCategory,
      |                        ~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:639:8: note: candidate: ‘void clang::ento::BugReporter::EmitBasicReport(const clang::Decl*, clang::ento::CheckerNameRef, llvm::StringRef, llvm::StringRef, llvm::StringRef, clang::ento::PathDiagnosticLocation, llvm::ArrayRef<clang::SourceRange>, llvm::ArrayRef<clang::FixItHint>)’
  639 |   void EmitBasicReport(const Decl *DeclWithIssue, CheckerNameRef CheckerName,
      |        ^~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:639:66: note:   no known conversion for argument 2 from ‘const {anonymous}::SAGenTestChecker*’ to ‘clang::ento::CheckerNameRef’
  639 |   void EmitBasicReport(const Decl *DeclWithIssue, CheckerNameRef CheckerName,
      |                                                   ~~~~~~~~~~~~~~~^~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
